argo/apps/media-center/seerr/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-http
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik

  rules:
    - host: seerr.media.nora
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 80
